# reflex-nix-demo

./: .ghci  default.nix  demo.cabal  demo.nix  dev.sh  shell.nix
exe/: Main.hs
src/: Demo.hs
