name:                demo
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Demo
  build-depends:       base >=4.9 && <4.11
                     , reflex
                     , reflex-dom-core
  if !impl(ghcjs -any)
    build-depends:     jsaddle-warp
  hs-source-dirs:      src
  if impl(ghcjs -any)
    ghc-options:       -Wall -dedupe
    cpp-options:       -DGHCJS_BROWSER
  else
    ghc-options:       -Wall
  default-language:    Haskell2010

executable demo
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , reflex-dom
                     , demo
  hs-source-dirs:      exe
  if impl(ghcjs -any)
    ghc-options:       -Wall -dedupe
    cpp-options:       -DGHCJS_BROWSER
  else
    ghc-options:       -Wall
  default-language:    Haskell2010
